Use the provided page title.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
-	<title>NorthScale - Labs</title>
+	<title>{{ page.title }}</title>
 	<link rel="stylesheet" type="text/css" href="/css/styles.css" />
 	<!--[if lte IE 8]><link rel="stylesheet" type="text/css" href="/css/ie_lte_8.css" /><![endif]-->
 	<!--[if lte IE 7]><link rel="stylesheet" type="text/css" href="/css/ie_lte_7.css" /><![endif]-->
