updated layout with launch details

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,15 +17,8 @@
 	<div id="Wrapper">
 		<div id="WrapperChannel">
 			<div id="Header" class="selfClear">
-				<div id="SiteId"><a href="/"><img src="/images/labs-logo.png" alt="NorthScale Labs" width="281" height="34" /></a></div>
+				<div id="SiteId" style="margin-left: 30px;"><a href="http://northscale.com"><img src="http://labs.northscale.com/images/ns-logo.gif" alt="NorthScale Labs"/></a></div>
 				<div id="NavigationPrimary" class="selfClear">
-					<ul>
-						<li class="first" id="NavigationPrimaryHome"><a href="http://www.northscale.com/">Home</a></li>
-						<li id="NavigationPrimaryTeam"><a href="http://www.northscale.com/team.html">Team</a></li>
-						<li id="NavigationPrimaryContact"><a href="http://www.northscale.com/contact.html">Contact</a></li>
-						<li id="NavigationPrimaryBlog"><a href="http://blog.northscale.com/">Blog</a></li>
-						<li class="last" id="NavigationPrimaryLabs"><a href="/" class="active">Labs</a></li>
-					</ul>
 				</div>
 			</div><!-- div#Header -->
 
@@ -85,6 +78,7 @@
 						</div><!-- #ContentChannel -->
 					</div><!-- #Content -->
 				</div><!-- #MainChannel -->
+				
 			</div><!-- #MainBody -->
 			<div id="Footer" class="selfClear">
 				<p class="copy">&copy; 2009&nbsp;</p>
@@ -102,15 +96,8 @@
 					<p class="note">NorthScale creates innovative applications and services to help web sites scale data usage.</p>
 				</div>
 				<p class="copy">. All Rights Reserved</p>
-				<ul class="siteLinks">
-					<li class="first"><a href="index.html">Home</a></li>
-					<li><a href="team.html">Team</a></li>
-					<li><a href="contact.html">Contact</a></li>
-					<li><a href="blog.html">Blog</a></li>
-					<li><a href="labs.html">Labs</a></li>
-
-			  </ul>
 			</div><!-- #Footer -->
+			
 		</div><!-- #WrapperChannel -->
 	</div><!-- #Wrapper -->
 	<script src="/javascript/jquery-latest.min.js" type="text/javascript"></script>
